--- a/inst/NEWS
+++ b/inst/NEWS
@@ -8,8 +8,13 @@ most sensitive groups on which to focus for biological interpretation.
 - Add of PCAdataplot() a function to visualize omic data.
 - Add of an column named maxychange (maximal absolute y change (up or down) 
 from the control) in the output of drcfit() (and so of bmdcalc() and bmdboot())
-- Add an argument named scaling in curvesplot() that enables the scaling of 
-(y - y0) values by dividing them by maxychange (new output of drcfit)
+- Add an argument named scaling in curvesplot() and bmdplotwithgradient()
+that enables the scaling of the shifted signal (y - y0) by dividing 
+it by maxychange (new output of drcfit).
+
+BUG FIXES
+- Make sensitivityplot works even when BMDsummary is not given in input 
+("first.quartile" defined as default)
 
 
 Version 2.4-0 
@@ -78,7 +83,7 @@ package lighter
 residualtests
 
 BUG FIXES
-- gestion in RNAseqdata() of all the cases for which vst() may give a stop message.
+- handling in RNAseqdata() of all the cases for which vst() may give a stop message.
 
 
 Version 2.1-0 
