Inclusion in the vignette of specific data (batch effect, in situ data) and modification of the default value of transfo.method to prevent pbs with outliers when using RNAseqdata() with a large number of samples.

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -18,6 +18,8 @@ matrix of the signal measurements and the vector of observed/tested doses.
 RNAseqdata(), microarraydata() and continuousomicdata() objects, 
 to prevent the automatic plot of many outliers as individual points and so
 produce lighter plot files.
+- Change the default value of transfo.method in RNAseqdata() (put at "vst" 
+when the number of samples is large than 30)
 
 BUG FIXES
 - Make sensitivityplot works even when BMDsummary is not given in input 
